--- a/dependencies/android/build.gradle
+++ b/dependencies/android/build.gradle
@@ -18,4 +18,6 @@ android {
 dependencies {
     implementation project(':deps:extension-api')
     implementation group: 'com.unity3d.ads', name: 'unity-ads', version: '3.6.0'
+    implementation platform('com.google.firebase:firebase-bom:28.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
